modify utterance issue-term as "url"

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,6 @@
 <script src="https://utteranc.es/client.js"
         repo="changdae-lee/changdae-lee.github.io"
-        issue-term="pathname"
+        issue-term="url"
         theme="github-light"
         crossorigin="anonymous"
         async>
