--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 <script src="https://utteranc.es/client.js"
-        repo="changdae-lee/changdae-lee.github.io"
+        repo="greatleee/greatleee.github.io"
         issue-term="url"
         theme="github-light"
         crossorigin="anonymous"
